# soulstream

./: .env.soul-server-ts.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  haniel.yaml  node_modules  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.ps1
chrome-extension/: README.md  (+2 more)
soul-client/: pyproject.toml
soul-client/src/soul_client/: client.py
soul-desktop/src-tauri/: Cargo.toml  tauri.conf.json
soul-desktop/src-tauri/capabilities/: default.json
soul-desktop/src-tauri/icons/: icon.icns
soul-desktop/src-tauri/src/: external_nav.rs  lib.rs  main.rs
soul-server/: .env.example  .gitignore  packages.txt  pyproject.toml
soul-server/data/: metadata_rules.yaml
soul-server/scripts/: BACKFILL.md  backfill_caller_info_r6.py  backfill_subtree_height.py  migrate_to_postgres.py  reindex_fts.py
soul-server/sql/: schema.sql
soul-server/sql/migrations/: 001_list_sessions_folder_node_filter.sql  003_sessions_status_filter.sql  009_away_summary.sql  010_push_tokens.sql  014_task_tree_realtime_pin.sql  016_claude_transcript_append_jsonb_shape_guard.sql  018_board_file_assets.sql  019_markdown_document_version.sql  023_board_frames.sql  024_session_get_all_stable_order.sql
soul-server/src/soul_server/: __init__.py  bootstrap.py  bootstrap_lifespan.py  config.py  constants.py  main.py  middleware.py
soul-server/src/soul_server/api/: __init__.py  agents.py  attachments.py  auth.py  catalog.py  credentials.py  dashboard.py  llm.py  oauth_profiles.py  portrait_utils.py  sessions.py  tasks.py
soul-server/src/soul_server/claude/: __init__.py  agent_runner.py  client_lifecycle.py  compact_retry.py  diagnostics.py  error_handlers.py  hook_builder.py  input_request.py  instrumented_client.py  message_processor.py  receive_loop.py  runner_registry.py  sdk_compat.py  sdk_patches.py  session_validator.py
soul-server/src/soul_server/cogito/: __init__.py  brief_composer.py  mcp_catalog.py  mcp_cogito.py  mcp_multi_node.py  mcp_session_mgmt.py  mcp_session_query.py  mcp_tools.py  reflector_setup.py  refresh.py  search.py
soul-server/src/soul_server/dashboard/: api_router.py  auth.py  auth_routes.py  session_cache.py  user_profile.py
soul-server/src/soul_server/engine/: __init__.py  runner.py  types.py
soul-server/src/soul_server/llm/: __init__.py  adapters.py  executor.py
soul-server/src/soul_server/migration/: __init__.py  legacy_migrator.py
soul-server/src/soul_server/models/: __init__.py  llm.py  schemas.py
soul-server/src/soul_server/serendipity/: __init__.py  adapter.py
soul-server/src/soul_server/service/: __init__.py  agent_registry.py  atom_context.py  catalog_service.py  context_builder.py  credential_store.py  credential_swapper.py  cross_node_relay.py  engine_adapter.py  event_persistence.py  event_store.py  execution_context_builder.py  file_manager.py  intervention_service.py  legacy_migrator.py  message_submission_service.py  metadata_extractor.py  oauth_token_registry.py  postgres_session_db.py  prompt_assembler.py  rate_limit_tracker.py  resource_manager.py  runner_pool.py  serendipity_adapter.py  serendipity_client.py  session_analyzer.py  session_broadcaster.py  session_catalog.py  session_db.py  session_eviction_manager.py  session_query_service.py  sse_streaming.py  task_executor.py  task_factory.py  task_listener.py  task_maintenance.py  task_manager.py  task_models.py  task_storage.py
soul-server/src/soul_server/upstream/: __init__.py  adapter.py  claude_auth_handlers.py  command_handler.py  event_relay.py  protocol.py  reconnect.py
soul-server/src/soul_server/util/: attachment_helpers.py
soul-server/src/soul_server/utils/: async_bridge.py
soul-server/tests/: conftest.py  mock_runner.py  test_agent_registry.py  test_agent_registry_backend.py  test_agent_runner.py  test_agent_tools.py  test_api_dashboard_status.py  test_api_session_events.py  test_ask_user_question.py  test_async_bridge.py  test_attachment_payload_persist.py  test_auth_session.py  test_backfill_subtree_height.py  test_bootstrap_lifespan.py  test_bootstrap_resume_shutdown.py  test_brief_composer.py  test_build_init_event.py  test_catalog_api.py  test_catalog_service.py  test_claude_auth.py  test_claude_auth_api.py  test_claude_auth_headless.py  test_client_lifecycle.py  test_cogito_mcp.py  test_cogito_sources.py  test_compact_retry.py  test_config.py  test_config_settings_api.py  test_context_builder.py  test_create_agent_session_caller_info.py  test_create_remote_agent_session_caller_info.py  test_create_session_profile_alias.py  test_credential_store.py  test_credential_swapper.py  test_credentials_api.py  test_dash_user_profile.py  test_dashboard_api.py  test_dashboard_auth.py  test_dashboard_create_session_caller_info.py  test_dashboard_get_sessions.py  (+85 more)
soul-server/tests/fixtures/: session_error.jsonl  session_multi_turn.jsonl  session_simple.jsonl  session_single_turn.jsonl
soulstream-server/: pyproject.toml
soulstream-server/src/soulstream_server/: config.py  constants.py  main.py
soulstream-server/tests/: conftest.py  test_api_claude_auth_headless.py  test_api_folders.py  test_api_nodes.py  test_api_nodes_stream.py  test_api_sessions.py  test_main_on_node_change.py  test_node_connection.py  test_node_manager.py  test_session_router.py  test_system_prompt_flow.py  test_ws_handler.py
(+1876 files in other folders)
