[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soul-client"
version = "0.1.0"
description = "Soulstream Python client - HTTP + SSE client for soul-server"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/soul_client"]
