[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soul-server"
version = "0.1.0"
description = "Soulstream - Claude Code remote execution server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "anyio>=4.0.0",
    "psutil>=5.9.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/soul_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
