[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soul-server"
version = "0.1.0"
description = "Soulstream - Claude Code remote execution server"
requires-python = ">=3.11"
dependencies = [
    "soul-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "anyio>=4.0.0",
    "psutil>=5.9.0",
    "claude-agent-sdk>=0.1.73",
    "aiofiles>=23.0.0",
    "sse-starlette>=1.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "openai>=1.0",
    "anthropic>=0.30",
    "cogito @ git+https://github.com/eiaserinnys/cogito.git#subdirectory=python",
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.27.0",
    # test_create_remote_agent_session_caller_info.py가 respx로 orch /api/sessions mock.
    # 미명시 시 collection error → cascade fixture 오염 위험 (R-4 단계 2에서 사용자 catch).
    # orch-server와 §9 대칭.
    "respx>=0.21.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/soul_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requires mock runner or real fixtures)",
]
