[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soulstream-server"
version = "0.1.0"
description = "Soulstream orchestrator server - manages soul-server nodes via WebSocket"
requires-python = ">=3.11"
dependencies = [
    "soul-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "sse-starlette>=1.6.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.2.0",
    "httpx>=0.27.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/soulstream_server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
