[package]
name = "soul-desktop"
version = "0.2.3"
description = "Soulstream Desktop App"
authors = ["eiaserinnys"]
edition = "2021"

[lib]
name = "soul_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
open = "5"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
